--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -323,14 +323,15 @@ it:
   label_please_login: Entra
   label_register: Registrati
   label_password_lost: Password dimenticata
-  label_home: Home
+  label_home: Pannello di controllo
   label_my_page: Pagina personale
   label_my_account: Il mio utente
   label_my_projects: I miei edizioni
   label_administration: Amministrazione
   label_login: Entra
   label_logout: Esci
-  label_help: Aiuto
+  label_help: Guida
+  label_help_user: Manuale
   label_reported_issues: Articoli
   label_assigned_to_me_issues: I miei articoli
   label_last_login: Ultimo collegamento
