--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1066,7 +1066,9 @@ it:
   label_cross_organization_plural: Sigle
   label_cross_organization_new: Nuova sigla
   label_other_cross_organization_sametype: Altre sigle correlate
-
+  label_other_organization_sametype: Altre organismi associati correlati
+  label_other_organization_noone: Nessun organismo associato
+  
   label_tipo: Tipo dell'organismo
   label_descrizione: Descrizione
   label_organizzazione: Organizzazione 
@@ -1225,4 +1227,17 @@ it:
   field_se_visible_data: Visibile Data?
   field_se_visible_newsletter: Visibile Mail? 
   field_se_protetto: Protetto? 
+
+#User
+  label_power_user: Resp. Asso.
+  label_users: Utenti  
+  label_user_invoices: Altre fatture legate all'utente
+  label_organization_user_asso: Referenti org. asso correlati 
+  label_cross_organization_user_asso: Sigla utente
+  label_asso_organization: Organismo associato
+  label_asso_organization_noone: Nessun organismo associato
+    
+  field_power_user:  Responsabile organismo associato
+  field_users: Utenti 
+  field_: 
 
